keep ont modules commented!

--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -57,7 +57,8 @@
   <modules>
     <module>../medication.manager.configuration</module>
     <module>../medication.manager.persistence</module>
-    <module>../../ontologies/ont.medication</module>
+<!--     The following module causes trouble on top level builds, PLEASE KEEP COMMENTED! -->
+<!--     <module>../../ontologies/ont.medication</module> -->
     <module>../medication.manager.service</module>
     <module>../medication.manager.shell.commands</module>
     <module>../medication.missing.services.simulation</module>
