--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
+aal_eficiency/AALfficiency.pom/.project
+aal_eficiency/AALfficiency.pom/.settings
 aal_eficiency/AALfficiency.pom/target
 aal_eficiency/AALfficiency.test/target
+aal_eficiency/AALfficiencyService/.classpath
+aal_eficiency/AALfficiencyService/.project
+aal_eficiency/AALfficiencyService/.settings
 aal_eficiency/AALfficiencyService/target
+aal_eficiency/EnergyReaderPublisher/.classpath
+aal_eficiency/EnergyReaderPublisher/.project
+aal_eficiency/EnergyReaderPublisher/.settings
 aal_eficiency/EnergyReaderPublisher/target
+aal_eficiency/FitbitPublisher/.classpath
+aal_eficiency/FitbitPublisher/.project
+aal_eficiency/FitbitPublisher/.settings
 aal_eficiency/FitbitPublisher/target
 agenda/agenda.client/.classpath
 agenda/agenda.client/.project
@@ -176,18 +187,31 @@ long_term_behav/ltba.ui/.project
 long_term_behav/ltba.ui/.settings
 long_term_behav/ltba.ui/target
 medication/medication.manager.configuration/*.iml
+medication/medication.manager.configuration/.classpath
+medication/medication.manager.configuration/.project
+medication/medication.manager.configuration/.settings
+medication/medication.manager.configuration/target
 medication/medication.manager.configuration/target/classes
 medication/medication.manager.configuration/target/generated-sources
 medication/medication.manager.configuration/target/medication.manager.configuration-C.0.1-SNAPSHOT.jar
 medication/medication.manager.configuration/target/surefire
 medication/medication.manager.event.issuer/*.iml
+medication/medication.manager.event.issuer/.classpath
+medication/medication.manager.event.issuer/.project
+medication/medication.manager.event.issuer/.settings
 medication/medication.manager.event.issuer/target
 medication/medication.manager.integration.tests/*.iml
 medication/medication.manager.integration.tests/*.log
 medication/medication.manager.integration.tests/target
 medication/medication.manager.karaf.feature/*.iml
+medication/medication.manager.karaf.feature/.classpath
+medication/medication.manager.karaf.feature/.project
+medication/medication.manager.karaf.feature/.settings
 medication/medication.manager.karaf.feature/target
 medication/medication.manager.persistence/*.iml
+medication/medication.manager.persistence/.classpath
+medication/medication.manager.persistence/.project
+medication/medication.manager.persistence/.settings
 medication/medication.manager.persistence/target
 medication/medication.manager.pom/*.idea
 medication/medication.manager.pom/*.iml
@@ -201,21 +225,38 @@ medication/medication.manager.pom/medication.manager.pom.ipr
 medication/medication.manager.pom/out
 medication/medication.manager.pom/target
 medication/medication.manager.service/*.iml
+medication/medication.manager.service/.classpath
 medication/medication.manager.service/.project
 medication/medication.manager.service/.settings
 medication/medication.manager.service/target
 medication/medication.manager.servlet.ui.acquire.medicine/*.iml
+medication/medication.manager.servlet.ui.acquire.medicine/.classpath
+medication/medication.manager.servlet.ui.acquire.medicine/.project
+medication/medication.manager.servlet.ui.acquire.medicine/.settings
 medication/medication.manager.servlet.ui.acquire.medicine/target
 medication/medication.manager.servlet.ui.base/*.iml
+medication/medication.manager.servlet.ui.base/.classpath
+medication/medication.manager.servlet.ui.base/.project
+medication/medication.manager.servlet.ui.base/.settings
 medication/medication.manager.servlet.ui.base/target
 medication/medication.manager.servlet.ui.configuration/*.iml
 medication/medication.manager.servlet.ui.configuration/*.log
+medication/medication.manager.servlet.ui.configuration/.classpath
+medication/medication.manager.servlet.ui.configuration/.project
+medication/medication.manager.servlet.ui.configuration/.settings
 medication/medication.manager.servlet.ui.configuration/target
 medication/medication.manager.servlet.ui.review/*.iml
+medication/medication.manager.servlet.ui.review/.classpath
+medication/medication.manager.servlet.ui.review/.project
+medication/medication.manager.servlet.ui.review/.settings
 medication/medication.manager.servlet.ui.review/target
 medication/medication.manager.servlet.ui/*.iml
+medication/medication.manager.servlet.ui/.classpath
+medication/medication.manager.servlet.ui/.project
+medication/medication.manager.servlet.ui/.settings
 medication/medication.manager.servlet.ui/target
 medication/medication.manager.shell.commands/*.iml
+medication/medication.manager.shell.commands/.classpath
 medication/medication.manager.shell.commands/.project
 medication/medication.manager.shell.commands/.settings
 medication/medication.manager.shell.commands/target
@@ -227,13 +268,18 @@ medication/medication.manager.ui.runner/runner/log
 medication/medication.manager.ui.runner/target
 medication/medication.manager.ui/*.iml
 medication/medication.manager.ui/*.log
+medication/medication.manager.ui/.classpath
 medication/medication.manager.ui/.project
 medication/medication.manager.ui/.settings
 medication/medication.manager.ui/target
 medication/medication.manager.user.management/*.iml
 medication/medication.manager.user.management/*.rar
+medication/medication.manager.user.management/.classpath
+medication/medication.manager.user.management/.project
+medication/medication.manager.user.management/.settings
 medication/medication.manager.user.management/target
 medication/medication.missing.services.simulation/*.iml
+medication/medication.missing.services.simulation/.classpath
 medication/medication.missing.services.simulation/.project
 medication/medication.missing.services.simulation/.settings
 medication/medication.missing.services.simulation/target
@@ -251,6 +297,7 @@ nutritional/nutritional.karaf.feature/target
 nutritional/nutritional.pom/.project
 nutritional/nutritional.pom/.settings
 nutritional/nutritional.pom/target
+ontologies/ont.aalfficiencyscores/.project
 ontologies/ont.aalfficiencyscores/target
 ontologies/ont.activity/.classpath
 ontologies/ont.activity/.project
