--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -32,6 +32,10 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.container.osgi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.container.junit</artifactId>
       <scope>test</scope>
     </dependency>
