--- a/ontologies/ont.message/pom.xml
+++ b/ontologies/ont.message/pom.xml
@@ -49,8 +49,8 @@
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Version>${project.version}</Bundle-Version>
-            <Export-Package>org.universaal.ontology.owl.*</Export-Package>
-            <Private-Package>org.universaal.ontology.*</Private-Package>
+            <Export-Package>org.universAAL.ontology.owl</Export-Package>
+            <Private-Package>org.universAAL.ontology</Private-Package>
           </instructions>
         </configuration>
       </plugin>
