--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>drools.pom</artifactId>
-		<version>E.1</version>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>E.1.1-SNAPSHOT</version>
 		<relativePath>../drools.pom</relativePath>
 	</parent>
+	<modelVersion>4.0.0</modelVersion>
 	<artifactId>drools.reasoner</artifactId>
 	<version>${parent.version}</version>
 	<name>Drools reasoner</name>
@@ -25,15 +25,16 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.antlr</groupId>-->
-<!--			<artifactId>antlr</artifactId>-->
-<!--			<version>3.1.3</version>-->
-<!--			<scope>compile</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr</artifactId>
+			<version>3.1.3</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -43,41 +44,50 @@
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
 			<version>5.3.0.Final</version>
+			<!-- <version>6.0.0.CR3</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>knowledge-api</artifactId>
 			<version>5.3.0.Final</version>
+			<!-- <version>6.0.0.CR3</version> -->
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.drools</groupId>-->
-<!--			<artifactId>drools-compiler</artifactId>-->
-<!--			<version>5.3.0.Final</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.universAAL.ontology</groupId>-->
-<!--			<artifactId>ont.readenergy</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.universAAL.ontology</groupId>-->
-<!--			<artifactId>ont.aalfficiencyscores</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-compiler</artifactId>
+			<version>5.3.0.Final</version>
+			<!-- <version>6.0.0.CR3</version> -->
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.readenergy</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.aalfficiencyscores</artifactId>
+
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.mvel</groupId>-->
-<!--			<artifactId>mvel2</artifactId>-->
-<!--			<version>2.1.0.drools2</version>-->
-<!--			<scope>compile</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<version>5.1.17</version>-->
-<!--			<scope>compile</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.1.0.drools2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.17</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -108,6 +118,14 @@
 	</build>
 	<repositories>
 		<repository>
+			<id>central</id>
+			<name>Central Maven Repository</name>
+			<url>http://repo1.maven.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>apache-snapshots</id>
 			<name>Apache Snapshots</name>
 			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
@@ -117,6 +135,22 @@
 			<snapshots>
 				<updatePolicy>daily</updatePolicy>
 			</snapshots>
+		</repository>
+		<repository>
+			<id>uaal</id>
+			<name>universAAL Repositories</name>
+			<url>http://depot.universaal.org/maven-repo/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>uaal-snapshots</id>
+			<name>universAAL Snapshot Repositories</name>
+			<url>http://depot.universaal.org/maven-repo/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>com.springsource.repository.bundles.release</id>
