--- a/.gitattributes
+++ b/.gitattributes
@@ -1898,12 +1898,16 @@ long_term_behav/ltba.manager/NOTICE.txt -text
 long_term_behav/ltba.manager/pom.xml -text
 long_term_behav/ltba.nomhad.gateway/.classpath -text
 long_term_behav/ltba.nomhad.gateway/.project -text
+long_term_behav/ltba.nomhad.gateway/.settings/org.eclipse.core.resources.prefs -text
 long_term_behav/ltba.nomhad.gateway/.settings/org.eclipse.jdt.core.prefs -text
+long_term_behav/ltba.nomhad.gateway/.settings/org.eclipse.m2e.core.prefs -text
 long_term_behav/ltba.nomhad.gateway/.settings/org.maven.ide.eclipse.prefs -text
 long_term_behav/ltba.nomhad.gateway/pom.xml -text
 long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-0.0.1-SNAPSHOT.jar -text
+long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-2.0.0.jar -text
 long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-D.0.1-SNAPSHOT.jar -text
 long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-D.3.1.jar -text
+long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-E.0.1-SNAPSHOT.jar -text
 long_term_behav/ltba.pom/Drools_LTBA[!!-~]1.3.0[!!-~]KNX.launch -text
 long_term_behav/ltba.pom/pom.xml -text
 long_term_behav/ltba.publisher/ASL2.0.txt -text
