--- a/.gitattributes
+++ b/.gitattributes
@@ -1909,6 +1909,7 @@ long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-D.0.1-SNAPSHOT.ja
 long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-D.3.1.jar -text
 long_term_behav/ltba.nomhad.gateway/target/ltba.nomhad.gateway-E.0.1-SNAPSHOT.jar -text
 long_term_behav/ltba.pom/Drools_LTBA[!!-~]1.3.0[!!-~]KNX.launch -text
+long_term_behav/ltba.pom/Drools_LTBA[!!-~]2.0.0[!!-~]KNX.launch -text
 long_term_behav/ltba.pom/pom.xml -text
 long_term_behav/ltba.publisher/ASL2.0.txt -text
 long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1.launch -text
