--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<artifactId>drools.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.1.1-SNAPSHOT</version>
+		<version>E.1</version>
 		<relativePath>../drools.pom</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>drools.reasoner</artifactId>
-	<version>${parent.version}</version>
+	<version>E.1.1-SNAPSHOT</version>
 	<name>Drools reasoner</name>
 	<description>The Drools based reasoner</description>
 	<packaging>bundle</packaging>
