--- a/long_term_behav/ltba.nomhad.gateway/pom.xml
+++ b/long_term_behav/ltba.nomhad.gateway/pom.xml
@@ -2,13 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>ltba.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
 		<version>E.1</version>
 		<relativePath>../ltba.pom</relativePath>
 	</parent>
 	<artifactId>ltba.nomhad.gateway</artifactId>
-	<version>E.1</version>
+	<version>E.1.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>LTBA to Nomhad gateway</name>
 	<description>		</description>
@@ -25,7 +25,7 @@
 						<Bundle-Activator>es.tsb.ltba.nomhad.activator.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>es.tsb.ltba.nomhad.gateway</Export-Package>
+
 						<!--
 							<Import-Package>*,org.universaal.ltba.ui.impl.main</Import-Package>
 						-->
