--- a/.gitattributes
+++ b/.gitattributes
@@ -1897,6 +1897,8 @@ long_term_behav/ltba.manager/LTBA_Demo_B.0.1.launch -text
 long_term_behav/ltba.manager/LTBA_Demo_B.0.1_with_reasoner_UI_Services_DIRTYDRAFT.launch -text
 long_term_behav/ltba.manager/NOTICE.txt -text
 long_term_behav/ltba.manager/pom.xml -text
+long_term_behav/ltba.manager/src/main/java/org/universAAL/ltba/manager/Setup.java -text
+long_term_behav/ltba.manager/src/main/java/org/universAAL/ltba/pir/PIRController.java -text
 long_term_behav/ltba.nomhad.gateway/.classpath -text
 long_term_behav/ltba.nomhad.gateway/.project -text
 long_term_behav/ltba.nomhad.gateway/.settings/org.eclipse.core.resources.prefs -text
