Data load process has been updated added option to add new use via shell command added option to reset Medication database

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -8,3 +8,4 @@ medication.manager.debug=true
 medication.manager.load.prescriptionsdtos=false
 medication.manager.insert.dummy.users.into.che=true
 medication.manager.issuer.interval.minutes=60
+medication.manager.test.mode=false
